DPM-20230101 Removing temp gauge adding reboot

--- a/openHASP-configs/HomeAssistant/openhasp_configs/victorias_room.yaml
+++ b/openHASP-configs/HomeAssistant/openhasp_configs/victorias_room.yaml
@@ -11,7 +11,7 @@
           "text": "{{ states('sensor.monthly_energy_cost') }}"
       - obj: "p0b4"
         properties:
-          "text": "{{ states('sensor.octopus_energy_previous_accumulative_cost') }}"
+          "text": "{{ states('sensor.octopus_energy_electricity_22l3629730_1591045314394_current_accumulative_cost') }}"
       - obj: "p0b7"
         properties:
           "text": "{{ states('sensor.myenergi_zappi_ev1_power_ct_grid') }}"
@@ -96,7 +96,7 @@
           "text": "{{ states('sensor.tank_percentage_full') | int }}"
           "text_color": >
             {{ "#ffffff" }}
-            
+
 # End Header
 
       - obj: "p1b1" # switch, checkbox or btn with toggle true
@@ -136,12 +136,23 @@
 
       - obj: "p1b5" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("light.hue_white_lamp_1", "on") else 0 }}'
-          "text": '{{ "\uE2E3 Bedside" if is_state("light.hue_white_lamp_1", "on") else "\uE2E3 Bedside" | e }}'
+          "val": '{{ 0 }}'
+          "text": '{{ "REBOOT" }}'
         event:
           "down":
-            - service: homeassistant.toggle
-              entity_id: "light.hue_white_lamp_1"
+            - service: script.1700776378083
+              data:
+                mqttcmd: reboot
+                mqttname: upbath
+
+      # - obj: "p1b5" # switch, checkbox or btn with toggle true
+      #   properties:
+      #     "val": '{{ 1 if is_state("light.hue_white_lamp_1", "on") else 0 }}'
+      #     "text": '{{ "\uE2E3 Bedside" if is_state("light.hue_white_lamp_1", "on") else "\uE2E3 Bedside" | e }}'
+      #   event:
+      #     "down":
+      #       - service: homeassistant.toggle
+      #         entity_id: "light.hue_white_lamp_1"
 
       - obj: "p1b6" # switch, checkbox or btn with toggle true
         properties:
@@ -167,186 +178,3 @@
 
 # End of Alarm Panel
 
-
-
-
-# Next Theremostat Control
-
-      - obj: "p11b20"  # arc slider
-        properties:
-          "val": "{{ state_attr('climate.hallway','temperature') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "min": "{{ state_attr('climate.hallway','min_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "max": "{{ state_attr('climate.hallway','max_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "line_color1": >
-            {% if is_state('climate.hallway', 'cool') %}
-            {{ "#346beb" }}
-            {%-elif is_state('climate.hallway', 'heat_cool') %}
-            {{ "#34bdeb" }}
-            {%-elif is_state('climate.hallway', 'heat') %}
-            {{ "#eb3434" }}
-            {%-elif is_state('climate.hallway', 'dry') %}
-            {{ "#ebeb34" }}
-            {%-elif is_state('climate.hallway', 'fan_only') %}
-            {{ "#34eb77" }}
-            {%-else %}
-            {{ "#9f96b0" }}
-            {% endif %}
-        event:
-          "changed":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ val | int / 10 }}"
-          "up":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ val | int / 10 }}"
-
-      - obj: "p11b21"  # gauge current temp
-        properties:
-          "val": "{{ state_attr('climate.hallway','current_temperature') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "min": "{{ state_attr('climate.hallway','min_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "max": "{{ state_attr('climate.hallway','max_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "critical_value": "{{ (state_attr('climate.hallway','max_temp') * 10 | int + 1) if not (is_state('climate.hallway','unavailable')) }}"
-          "label_count": "{{ (state_attr('climate.hallway','max_temp') | int - state_attr('climate.hallway','min_temp') | int + 1) if not (is_state('climate.hallway','unavailable')) }}"
-          "line_count": "{{ ((state_attr('climate.hallway','max_temp') | int - state_attr('climate.hallway','min_temp') | int) * 2 + 1) if not (is_state('climate.hallway','unavailable')) }}"
-
-      - obj: "p11b23"  # label current temp (and +/- with short/long touch)
-        properties:
-          "text": "{{ state_attr('climate.hallway','current_temperature') if not (is_state('climate.hallway','unavailable')) }}"
-        event:
-          "up":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ state_attr('climate.hallway','temperature') + state_attr('climate.hallway','target_temp_step') | float(default=0)}}" 
-          "long":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ state_attr('climate.hallway','temperature') - state_attr('climate.hallway','target_temp_step') | float(default=0)}}" 
-
-
-      - obj: "p11b25"  # label target temp
-        properties:
-          "text": "{{ state_attr('climate.hallway','temperature') if not (is_state('climate.hallway','unavailable')) }}"
-
-
-      - obj: "p11b41"  # on/off switch
-        properties:
-          "val": "{{ 0 if (is_state('climate.hallway', 'off') or is_state('climate.hallway', 'unavailable')) else 1 }}"
-        event:
-          "down":
-            - service_template: >
-                {% if val == 0 -%}
-                climate.turn_on
-                {% else -%}
-                climate.turn_off
-                {% endif -%}
-              entity_id: "climate.hallway"
-
-      - obj: "p11b30"  # tab dots
-        event:
-          "changed":
-            - service: openhasp.command
-              target:
-                entity_id: openhasp.victorias_room
-              data:
-                keyword: p11b26.text
-                parameters: >
-                  {% if val == 0 %}
-                  {{ "#000000 \u2022# #909090 \u2022# #909090 \u2022#" | e }}
-                  {%-elif val == 1 %}
-                  {{ "#909090 \u2022# #000000 \u2022# #909090 \u2022#" | e }}
-                  {%-elif val == 2 %}
-                  {{ "#909090 \u2022# #909090 \u2022# #000000 \u2022#" | e }}
-                  {% endif %}
-
-      - obj: "p11b42"  # dropdown with fan_modes
-        properties:
-          "options": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','fan_modes')%}
-            {%- if mode == 'auto' -%}
-            Automatic{{"\n"|e}}
-            {%- elif mode == 'low' -%}
-            Low{{"\n"|e}}
-            {%- elif mode == 'medium' -%}
-            Medium{{"\n"|e}}
-            {%- elif mode == 'high' -%}
-            High{{"\n"|e}}
-            {%- elif mode == 'turbo' -%}
-            Turbo{{"\n"|e}}
-            {%- endif -%}
-            {%-if not loop.last%}{%-endif%}{%-endfor%}{% endif %}
-          "val": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','fan_modes')%}
-            {{loop.index -1 if mode == state_attr('climate.hallway','fan_mode') }}
-            {%-endfor%}{% endif %}
-        event:
-          "changed":
-            - service: climate.set_fan_mode
-              target:
-                entity_id: climate.hallway
-              data:
-                fan_mode: >
-                  {% if text == "Automatic" -%}
-                  auto
-                  {% elif text == 'Low' -%}
-                  low
-                  {% elif text == 'Medium' -%}
-                  medium
-                  {% elif text == 'High' -%}
-                  high
-                  {% elif text == 'Turbo' -%}
-                  turbo
-                  {% endif -%}
-
-      - obj: "p11b43"  # dropdown with hvac_modes
-        properties:
-          "options": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','hvac_modes')%}
-            {%- if mode == 'off' -%}
-            Off{{"\n"|e}}
-            {%- elif mode == 'heat' -%}
-            Heating{{"\n"|e}}
-            {%- elif mode == 'cool' -%}
-            Cooling{{"\n"|e}}
-            {%- elif mode == 'heat_cool' -%}
-            Heat/Cool{{"\n"|e}}
-            {%- elif mode == 'dry' -%}
-            Drying{{"\n"|e}}
-            {%- elif mode == 'fan_only' -%}
-            Fan only{{"\n"|e}}
-            {%- else -%}
-            On{{"\n"|e}}
-            {%- endif -%}
-            {%-if not loop.last%}{%-endif%}{%-endfor%}{% endif %}
-          "val": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','hvac_modes')%}
-            {{loop.index -1 if mode == states('climate.hallway') }}
-            {%-endfor%}{% endif %}
-        event:
-          "changed":
-            - service: climate.set_hvac_mode
-              target:
-                entity_id: climate.hallway
-              data:
-                hvac_mode: >
-                  {% if text == "Off" -%}
-                  off
-                  {% elif text == 'Heating' -%}
-                  heat
-                  {% elif text == 'Cooling' -%}
-                  cool
-                  {% elif text == 'Heat/Cool' -%}
-                  heat_cool
-                  {% elif text == 'Drying' -%}
-                  dry
-                  {% elif text == 'Fan only' -%}
-                  fan_only
-                  {% endif -%}
