--- a/openHASP-configs/HomeAssistant/openhasp_configs/porch.yaml
+++ b/openHASP-configs/HomeAssistant/openhasp_configs/porch.yaml
@@ -11,7 +11,7 @@
           "text": "{{ states('sensor.monthly_energy_cost') }}"
       - obj: "p0b4"
         properties:
-          "text": "{{ states('sensor.octopus_energy_previous_accumulative_cost') }}"
+          "text": "{{ states('sensor.octopus_energy_electricity_22l3629730_1591045314394_current_accumulative_cost') }}"
       - obj: "p0b7"
         properties:
           "text": "{{ states('sensor.myenergi_zappi_ev1_power_ct_grid') }}"
@@ -102,7 +102,8 @@
       - obj: "p1b1" # switch, checkbox or btn with toggle true
         properties:
           "val": '{{ 1 if is_state("light.porch_light_12", "on") else 0 }}'
-          "text": '{{ "\uE6E8 Front" if is_state("light.porch_light_12", "on") else "\uE335 Front" | e }}'
+          "text": '{{ "Front\nLights" if is_state("light.porch_light_12", "on") else "Front\nLights" | e }}'
+          "text_font": 1
         event:
           "down":
             - service: homeassistant.toggle
@@ -110,19 +111,21 @@
       - obj: "p1b2" # switch, checkbox or btn with toggle true
         properties:
           "val": '{{ 1 if is_state("light.porch_light_14", "on") else 0 }}'
-          "text": '{{ "\uE6E8 Porch" if is_state("light.porch_light_14", "on") else "\uE335 Porch" | e }}'
+          "text": '{{ "Porch\nLights" if is_state("light.porch_light_14", "on") else "Porch\nLights" | e }}'
+          "text_font": 1
         event:
           "down":
             - service: homeassistant.toggle
               entity_id: "light.porch_light_14"
       - obj: "p1b3" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("switch.garden_lights", "on") else 0 }}'
-          "text": '{{ "\uE6E8 Garden" if is_state("switch.garden_lights", "on") else "\uE335 Garden" | e }}'
+          "val": '{{ 1 if is_state("switch.shellypro4pm_garden_lights", "on") else 0 }}'
+          "text": '{{ "Garden\nLights" if is_state("switch.shellypro4pm_garden_lights", "on") else "Garden\nLights" | e }}'
+          "text_font": 1
         event:
           "down":
             - service: homeassistant.toggle
-              entity_id: "switch.garden_lights"
+              entity_id: "switch.shellypro4pm_garden_lights"
 
       - obj: "p1b4" # switch, checkbox or btn with toggle true
         properties:
@@ -135,26 +138,29 @@
 
       - obj: "p1b5" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("switch.unused", "on") else 0 }}'
-          "text": '{{ "Unused if is_state("switch.unused", "on") else "Unused" | e }}'
+          "val": '{{ 0 }}'
+          "text": '{{ "REBOOT" }}'
         event:
           "down":
-            - service: homeassistant.toggle
-              entity_id: "switch.unused"
+            - service: script.1700776378083
+              data:
+                mqttcmd: reboot
+                mqttname: porch
 
       - obj: "p1b6" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("switch.unused", "on") else 0 }}'
-          "text": '{{ "Unused if is_state("switch.unused", "on") else "Unused" | e }}'
+          "val": '{{ 1 if is_state("switch.flood_light", "on") else 0 }}'
+          "text": '{{ "\uE5A8\nFlood" if is_state("switch.flood_light", "on") else "\uE5A8\nFlood" | e }}'
         event:
           "down":
             - service: homeassistant.toggle
-              entity_id: "switch.unused"
-
+              entity_id: "switch.flood_light"
+              
       - obj: "p1b7" # switch, checkbox or btn with toggle true
         properties:
           "val": '{{ 1 if is_state("switch.irrigation", "on") else 0 }}'
-          "text": '{{ "\uE58F Garden" if is_state("switch.irrigation", "on") else "\uE58F Garden" | e }}'
+          "text": '{{ "Garden\nIrrigation" if is_state("switch.irrigation", "on") else "Garden\nIrrigation" | e }}'
+          "text_font": 1
         event:
           "down":
             - service: homeassistant.toggle
@@ -163,7 +169,8 @@
       - obj: "p1b8" # switch, checkbox or btn with toggle true
         properties:
           "val": '{{ 1 if is_state("switch.balcony_irrigation", "on") else 0 }}'
-          "text": '{{ "\uE58F Balcony" if is_state("switch.balcony_irrigation", "on") else "\uE58F Balcony" | e }}'
+          "text": '{{ "Balcony\nIrrigation" if is_state("switch.balcony_irrigation", "on") else "Balcony\nIrrigation" | e }}'
+          "text_font": 1
         event:
           "down":
             - service: homeassistant.toggle
@@ -171,12 +178,13 @@
          
       - obj: "p1b9" # switch, checkbox or btn with toggle true
         properties:
-          "val": '{{ 1 if is_state("switch.flood_light", "on") else 0 }}'
-          "text": '{{ "\uE5A8 Flood" if is_state("switch.flood_light", "on") else "\uE5A8 Flood" | e }}'
+          "val": '{{ 1 if is_state("vacuum.neelix", "on") else 0 }}'
+          "text": '{{ "\uF1F3 Mow" if is_state("vacuum.neelix", "on") else "\uF1F3 Mow" | e }}'
+          "text_font": 1
         event:
           "down":
             - service: homeassistant.toggle
-              entity_id: "switch.flood_light"
+              entity_id: "vacuum.neelix"
 
                             
 # Beginning of Alarm Panel
@@ -193,187 +201,3 @@
                 code: "1776"
 
 # End of Alarm Panel
-
-
-
-
-# Next Theremostat Control
-
-      - obj: "p11b20"  # arc slider
-        properties:
-          "val": "{{ state_attr('climate.hallway','temperature') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "min": "{{ state_attr('climate.hallway','min_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "max": "{{ state_attr('climate.hallway','max_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "line_color1": >
-            {% if is_state('climate.hallway', 'cool') %}
-            {{ "#346beb" }}
-            {%-elif is_state('climate.hallway', 'heat_cool') %}
-            {{ "#34bdeb" }}
-            {%-elif is_state('climate.hallway', 'heat') %}
-            {{ "#eb3434" }}
-            {%-elif is_state('climate.hallway', 'dry') %}
-            {{ "#ebeb34" }}
-            {%-elif is_state('climate.hallway', 'fan_only') %}
-            {{ "#34eb77" }}
-            {%-else %}
-            {{ "#9f96b0" }}
-            {% endif %}
-        event:
-          "changed":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ val | int / 10 }}"
-          "up":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ val | int / 10 }}"
-
-      - obj: "p11b21"  # gauge current temp
-        properties:
-          "val": "{{ state_attr('climate.hallway','current_temperature') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "min": "{{ state_attr('climate.hallway','min_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "max": "{{ state_attr('climate.hallway','max_temp') * 10 | int if not (is_state('climate.hallway','unavailable')) }}"
-          "critical_value": "{{ (state_attr('climate.hallway','max_temp') * 10 | int + 1) if not (is_state('climate.hallway','unavailable')) }}"
-          "label_count": "{{ (state_attr('climate.hallway','max_temp') | int - state_attr('climate.hallway','min_temp') | int + 1) if not (is_state('climate.hallway','unavailable')) }}"
-          "line_count": "{{ ((state_attr('climate.hallway','max_temp') | int - state_attr('climate.hallway','min_temp') | int) * 2 + 1) if not (is_state('climate.hallway','unavailable')) }}"
-
-      - obj: "p11b23"  # label current temp (and +/- with short/long touch)
-        properties:
-          "text": "{{ state_attr('climate.hallway','current_temperature') if not (is_state('climate.hallway','unavailable')) }}"
-        event:
-          "up":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ state_attr('climate.hallway','temperature') + state_attr('climate.hallway','target_temp_step') | float(default=0)}}" 
-          "long":
-            - service: climate.set_temperature
-              target:
-                entity_id: climate.hallway
-              data:
-                temperature: "{{ state_attr('climate.hallway','temperature') - state_attr('climate.hallway','target_temp_step') | float(default=0)}}" 
-
-
-      - obj: "p11b25"  # label target temp
-        properties:
-          "text": "{{ state_attr('climate.hallway','temperature') if not (is_state('climate.hallway','unavailable')) }}"
-
-
-      - obj: "p11b41"  # on/off switch
-        properties:
-          "val": "{{ 0 if (is_state('climate.hallway', 'off') or is_state('climate.hallway', 'unavailable')) else 1 }}"
-        event:
-          "down":
-            - service_template: >
-                {% if val == 0 -%}
-                climate.turn_on
-                {% else -%}
-                climate.turn_off
-                {% endif -%}
-              entity_id: "climate.hallway"
-
-      - obj: "p11b30"  # tab dots
-        event:
-          "changed":
-            - service: openhasp.command
-              target:
-                entity_id: openhasp.porch
-              data:
-                keyword: p11b26.text
-                parameters: >
-                  {% if val == 0 %}
-                  {{ "#000000 \u2022# #909090 \u2022# #909090 \u2022#" | e }}
-                  {%-elif val == 1 %}
-                  {{ "#909090 \u2022# #000000 \u2022# #909090 \u2022#" | e }}
-                  {%-elif val == 2 %}
-                  {{ "#909090 \u2022# #909090 \u2022# #000000 \u2022#" | e }}
-                  {% endif %}
-
-      - obj: "p11b42"  # dropdown with fan_modes
-        properties:
-          "options": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','fan_modes')%}
-            {%- if mode == 'auto' -%}
-            Automatic{{"\n"|e}}
-            {%- elif mode == 'low' -%}
-            Low{{"\n"|e}}
-            {%- elif mode == 'medium' -%}
-            Medium{{"\n"|e}}
-            {%- elif mode == 'high' -%}
-            High{{"\n"|e}}
-            {%- elif mode == 'turbo' -%}
-            Turbo{{"\n"|e}}
-            {%- endif -%}
-            {%-if not loop.last%}{%-endif%}{%-endfor%}{% endif %}
-          "val": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','fan_modes')%}
-            {{loop.index -1 if mode == state_attr('climate.hallway','fan_mode') }}
-            {%-endfor%}{% endif %}
-        event:
-          "changed":
-            - service: climate.set_fan_mode
-              target:
-                entity_id: climate.hallway
-              data:
-                fan_mode: >
-                  {% if text == "Automatic" -%}
-                  auto
-                  {% elif text == 'Low' -%}
-                  low
-                  {% elif text == 'Medium' -%}
-                  medium
-                  {% elif text == 'High' -%}
-                  high
-                  {% elif text == 'Turbo' -%}
-                  turbo
-                  {% endif -%}
-
-      - obj: "p11b43"  # dropdown with hvac_modes
-        properties:
-          "options": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','hvac_modes')%}
-            {%- if mode == 'off' -%}
-            Off{{"\n"|e}}
-            {%- elif mode == 'heat' -%}
-            Heating{{"\n"|e}}
-            {%- elif mode == 'cool' -%}
-            Cooling{{"\n"|e}}
-            {%- elif mode == 'heat_cool' -%}
-            Heat/Cool{{"\n"|e}}
-            {%- elif mode == 'dry' -%}
-            Drying{{"\n"|e}}
-            {%- elif mode == 'fan_only' -%}
-            Fan only{{"\n"|e}}
-            {%- else -%}
-            On{{"\n"|e}}
-            {%- endif -%}
-            {%-if not loop.last%}{%-endif%}{%-endfor%}{% endif %}
-          "val": >
-            {% if not (is_state('climate.hallway','unavailable')) %}{%for mode in state_attr('climate.hallway','hvac_modes')%}
-            {{loop.index -1 if mode == states('climate.hallway') }}
-            {%-endfor%}{% endif %}
-        event:
-          "changed":
-            - service: climate.set_hvac_mode
-              target:
-                entity_id: climate.hallway
-              data:
-                hvac_mode: >
-                  {% if text == "Off" -%}
-                  off
-                  {% elif text == 'Heating' -%}
-                  heat
-                  {% elif text == 'Cooling' -%}
-                  cool
-                  {% elif text == 'Heat/Cool' -%}
-                  heat_cool
-                  {% elif text == 'Drying' -%}
-                  dry
-                  {% elif text == 'Fan only' -%}
-                  fan_only
-                  {% endif -%}
